--- a/Renderer/imgui.ini
+++ b/Renderer/imgui.ini
@@ -3,14 +3,30 @@ Pos=60,60
 Size=400,400
 
 [Window][Dear ImGui Metrics/Debugger]
-Pos=35,15
-Size=356,79
+Pos=105,42
+Size=466,79
 
 [Window][Light]
 Pos=972,73
 Size=306,169
 
 [Window][Camera]
-Pos=1053,493
+Pos=981,321
 Size=254,151
+
+[Window][Debug]
+Pos=646,138
+Size=169,63
+
+[Window][Hello, world!]
+Pos=60,60
+Size=339,180
+
+[Window][Dear ImGui Demo]
+Pos=629,20
+Size=571,680
+
+[Window][Another Window]
+Pos=60,60
+Size=198,71
 
