--- a/Renderer/Renderer.vcxproj.filters
+++ b/Renderer/Renderer.vcxproj.filters
@@ -42,10 +42,22 @@
     <ClCompile Include="src\Headers\imgui\imgui.cpp">
       <Filter>Imgui</Filter>
     </ClCompile>
+    <ClCompile Include="src\Headers\imgui\imgui_demo.cpp">
+      <Filter>Imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Headers\imgui\imgui_draw.cpp">
+      <Filter>Imgui</Filter>
+    </ClCompile>
     <ClCompile Include="src\Headers\imgui\imgui_impl_glfw.cpp">
       <Filter>Imgui</Filter>
     </ClCompile>
     <ClCompile Include="src\Headers\imgui\imgui_impl_opengl3.cpp">
+      <Filter>Imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Headers\imgui\imgui_tables.cpp">
+      <Filter>Imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Headers\imgui\imgui_widgets.cpp">
       <Filter>Imgui</Filter>
     </ClCompile>
   </ItemGroup>
@@ -82,6 +94,9 @@
     <ClInclude Include="src\Headers\PerlinNoise\PerlinNoise.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\Headers\imgui\imconfig.h">
+      <Filter>Imgui</Filter>
+    </ClInclude>
     <ClInclude Include="src\Headers\imgui\imgui.h">
       <Filter>Imgui</Filter>
     </ClInclude>
@@ -92,6 +107,18 @@
       <Filter>Imgui</Filter>
     </ClInclude>
     <ClInclude Include="src\Headers\imgui\imgui_impl_opengl3_loader.h">
+      <Filter>Imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Headers\imgui\imgui_internal.h">
+      <Filter>Imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Headers\imgui\imstb_rectpack.h">
+      <Filter>Imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Headers\imgui\imstb_textedit.h">
+      <Filter>Imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Headers\imgui\imstb_truetype.h">
       <Filter>Imgui</Filter>
     </ClInclude>
   </ItemGroup>
