--- a/Renderer/imgui.ini
+++ b/Renderer/imgui.ini
@@ -11,8 +11,8 @@ Pos=1179,68
 Size=306,182
 
 [Window][Camera]
-Pos=1181,587
-Size=254,151
+Pos=678,67
+Size=254,165
 
 [Window][Debug]
 Pos=646,138
@@ -29,4 +29,8 @@ Size=571,680
 [Window][Another Window]
 Pos=60,60
 Size=198,71
+
+[Window][Performance]
+Pos=40,44
+Size=408,559
 
