--- a/Renderer/imgui.ini
+++ b/Renderer/imgui.ini
@@ -7,12 +7,12 @@ Pos=105,42
 Size=466,79
 
 [Window][Light]
-Pos=1179,68
-Size=306,182
+Pos=1181,56
+Size=270,182
 
 [Window][Camera]
-Pos=678,67
-Size=254,165
+Pos=787,45
+Size=254,171
 
 [Window][Debug]
 Pos=646,138
@@ -31,6 +31,10 @@ Pos=60,60
 Size=198,71
 
 [Window][Performance]
-Pos=40,44
-Size=408,559
+Pos=40,93
+Size=408,510
+
+[Window][Object]
+Pos=950,345
+Size=242,108
 
